--- a/Week 1/Week 1-Collecting Data Using Web Scraping.ipynb
+++ b/Week 1/Week 1-Collecting Data Using Web Scraping.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from operator import index\n",
     "\n",
     "\n",
-    "data.to_csv('popular-languages.csv', sep='\\t', encoding='utf-8', index=False)"
+    "data.to_csv('popular-languages.csv', encoding='utf-8', index=False)"
    ]
   }
  ],
